--- a/templates/profile.html
+++ b/templates/profile.html
@@ -44,7 +44,7 @@
     <span class="badge bg-primary">Сейчас вы находитесь на сайте под ником {{ user }}.</span>
   </div>
 </div>
-<footer style="padding:25px;" class="bg-primary">
+<footer style="padding:25px;" class="footer bg-primary">
   <div style="display: flex; justify-content: space-around;">
     <div style="display:flex; align-items: center; padding-top: 15px;" >
       <p style="font-size: large; color: rgb(255, 255, 255); margin-right: 10px;" >Сайт был создан вместе с командой Maximum Education</p>
