--- a/templates/login.html
+++ b/templates/login.html
@@ -46,21 +46,9 @@
   </li>
   {% endif %}
 </ul>
-  <div class="row">
-    <div class="col" style="margin: 50px;">
-      <div class="display-2">
-        <span class="badge bg-primary">Страница</span>
-      </div>
-    </div>
-    <div class="col" style="margin: 50px;">
-      <div class="display-2">
-        <span class="badge bg-primary">авторизации</span>
-      </div>
-    </div>
-    <div class="col" style="margin: 50px;">
-      <div class="display-2">
-        <span class="badge bg-primary">пользователя</span>
-      </div>
+  <div class="text-container">  
+    <div class="reg-div">
+      <span class="reg-text badge bg-primary">Страница авторизации пользователя</span>
     </div>
   </div>
   <div class="container">
