--- a/templates/novinki.html
+++ b/templates/novinki.html
@@ -62,9 +62,11 @@
         <li class="nav-item">
           <a class="nav-link" href="../novinki_za_den">Новинки за день</a>
         </li>
+        {% if user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link" href="/favorites">Избранное</a>
         </li>
+        {% endif %}
       </ul>
     </div>
 </div>
@@ -97,6 +99,7 @@
             <p class="card-text"><small class="text-muted">Размещено: {{adv.created}}</small></p>
             <span>Цена: {{adv.prices}}</span>
           </a>
+          {% if user.is_authenticated %}          
           {% if user in adv.favorites.all %}
           <form action="{% url 'remove_from_favorite' adv.id %}" method="post">
             {% csrf_token %}
@@ -107,6 +110,7 @@
             {% csrf_token %}
             <button type="submit" class="fav_button_on">Добавить в избранное</button>
           </form>
+          {% endif %}
           {% endif %}
         </div>
       </div>
