--- a/templates/novinki_den.html
+++ b/templates/novinki_den.html
@@ -64,9 +64,11 @@
         <li class="nav-item">
           <a class="nav-link active" href="#">Новинки за день</a>
         </li>
+        {% if user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link" href="/favorites">Избранное</a>
         </li>
+        {% endif %}
       </ul>
     </div>
 
@@ -105,6 +107,7 @@
             <p class="card-text"><small class="text-muted">Размещено: {{adv.created}}</small></p>
             <span>Цена: {{adv.prices}}</span>
           </a>
+          {% if user.is_authenticated %}
           {% if user in adv.favorites.all %}
           <form action="{% url 'remove_from_favorite' adv.id %}" method="post">
             {% csrf_token %}
@@ -115,6 +118,7 @@
             {% csrf_token %}
             <button type="submit" class="fav_button_on" >Добавить в избранное</button>
           </form>
+          {% endif %}
           {% endif %}
         </div>
       </div>
